[package]
name = "irnix"
version = "0.0.5"
edition = "2024"
description = "A system for organizing objects, which turns the file system into objects with methods and contracts."
license = "GPL-3-or-later"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.50", features = ["derive"] }
clap_complete = "4.5.60"
logos = "0.15.1"
regex = "1.12.2"
